--- a/style.css
+++ b/style.css
@@ -107,6 +107,10 @@ body {
     overflow: visible;
 }
 
+.result table td span.address {
+    color: #85825E;
+}
+
 .form-group input {
     padding: 10px;
     width: calc(100% - 20px);
@@ -168,17 +172,14 @@ button:hover {
 }
 
 .ip-range {
-    display: inline-flex;
-    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
 }
 
 .ip-range span {
     white-space: nowrap;
-}
-
-.ip-range span:first-child::after {
-    content: " -";
-    white-space: pre;
 }
 
 @media (max-width: 600px) {
